[package]
name = "rocket-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
futures = "0.3.28"
redis = "0.23.0"
reqwest = {version = "0.11.18", features=["json"]}
rocket = {version ="0.5.0-rc.3", features=["json"]}
serde = "1.0.164" 
serde_json = "1.0.99"
tokio = {version="1.28.2", features = ["full"]}
